--- a/0811js初级/angular/douban/bower.json
+++ b/0811js初级/angular/douban/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "douban",
-  "homepage": "https://github.com/236388696/LearnJS",
   "authors": [
-    "panpanzhuren <236388696@qq.com>"
+    "dllo <546903911@qq.com>"
   ],
   "description": "",
   "main": "",
   "license": "MIT",
+  "homepage": "",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -15,8 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7",
     "angular": "^1.5.9",
-    "angular-route": "^1.5.9"
+    "angular-route": "^1.5.9",
+    "bootstrap": "^3.3.7"
   }
 }
