--- a/0811js初级/react/Demo/package.json
+++ b/0811js初级/react/Demo/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "~15.4.0-rc.4",
-    "react-native": "0.38.1"
+    "react-native": "0.38.1",
+    "react-timer-mixin": "^0.13.3"
   }
 }
